# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [5.14.0] - 2024-04-14

### Added

- Novo tema de perfil `Website` - Criado por @maycon.orp.
- Novo tema de perfil `Memórias...` - Criado por @rukasu_888.
- Novo tema de perfil `Congelado` - Criado por @jhonny_dy.

## [5.13.6] - 2024-04-11

### Fixed

- Corrigido o problema da compra de um campo da fazendinha não o liberar.

## [5.13.5] - 2024-03-24

### Fixed

- Corrigido um problema onde o `/itens` não funcionava usando a Menhera em Português quando um usuário possuia todos itens em seu inventário, sem ativar nenhum.

## [5.13.4] - 2024-03-20

### Fixed

- Corrigido o problema de criar cores com nomes de menos de 2 caracteres.

## [5.13.3] - 2024-03-16

### Changed

- Ajustado alguns tempos limite para execução de comandos de imagens e de estatísticas.
- Agora, ao usar o comando `/blackjack` enquanto estiver em uma partida, a imagem da sua partida atual será reenviada (ao invés de iniciar uma nova partida). Com isso, caso a Menhera não consiga mostrar a mensagem de sua partida, você pode tentar enviar a mensagem novamente para continuar seu jogo.

### Fixed

- Corrigido um problema onde a Menhera não conseguia mais enviar mensagens para usuários, ou buscar perfil de usuários. (Foi mais uma gambiarra do que um fix hehe).

## [5.13.2] - 2024-02-21

### Fixed

- Os componentes do comando `/loja vender plantas` não funcionavam. - Reportado inicialmente por `rodriguess_s2` e `miihimdd`

## [5.13.1] - 2024-02-17

### Fixed

- Corrigido o comando `/personalizar badges` falhar se o usuário tivesse a badge de **200 votos**.
- Corrigido os problemas com interações em comandos que tinham algum subcomando em manutenção.