@@ -587,6 +587,14 @@
     "hunt": "Hunt",
     "vote": "Vote for Me",
     "click-to-vote": "Click to Vote",
+    "no-user": "This user does not use my commands :(",
+    "field": "Campo {{field}}",
+    "field-states": {
+      "EMPTY": "Free to plant!",
+      "GROWING": "It will mature in **<t:{{unix}}:T>** | **<t:{{unix}}:R>**",
+      "MATURE": "Can be harvested up to**<t:{{unix}}:T>** | **<t:{{unix}}:R>**",
+      "ROTTEN": "Rotted in **<t:{{unix}}:T>** | **<t:{{unix}}:R>**"
+    },
     "time": "**<t:{{unix}}:T>** | **<t:{{unix}}:R>**"
   },
   "trisal": {
